fix repo title name card text overflow

--- a/src/main.css
+++ b/src/main.css
@@ -160,7 +160,7 @@ header h5 {
 }
 
 .repo-card h4 {
-  /* width: 120px; */
+  width: 65%;
   font-size: 12px;
   /* border: 1px solid red; */
   /* color: white; */
